Update tags and replace encoder with generator

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "We will investigate three approaches to do so:\n",
     "\n",
-    "1. First, we will train an encoder.\n",
+    "1. First, we will train a generator (or encoder-decoder).\n",
     "2. Then, we will train a conditional generative adversarial network (cGAN).\n",
     "3. Finally, we will train a cycle generative adversarial network (CycleGAN).\n",
     "\n",
@@ -1173,7 +1173,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_output"
+    ]
+   },
    "outputs": [],
    "source": [
     "generator_cgan = train_cgan(train_loader, test_loader, num_epoch=num_epoch,\n",
@@ -1582,7 +1586,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_output"
+    ]
+   },
    "outputs": [],
    "source": [
     "generator_cyclegan = train_cyclegan(\n",
