--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -124,7 +124,7 @@
     "From these graphics, it's possible to have an overview of the distribution of\n",
     "the data, for the numerical values. For example, the educational level is\n",
     "well distributed among the participants of the study. Also, most of the\n",
-    "subject are young and healthy (MNS score equal 30 and CDR score equal 0).\n",
+    "subjects are young (around 20 years old) and healthy (MMS score equals 30 and null CDR score).\n",
     "\n",
     "The next cell will create (and run) a function (`characteristics_table`) that\n",
     "highlights the main features of the population in the dataset. We will use it\n",
@@ -172,7 +172,7 @@
     "    return population_df\n",
     "\n",
     "population_df = characteristics_table(OASIS_df, OASIS_df)\n",
-    "print(population_df)"
+    "population_df"
    ]
   },
   {
@@ -220,10 +220,18 @@
     "class MRIDataset(Dataset):\n",
     "    \n",
     "    def __init__(self, img_dir, data_df, transform=None):\n",
+    "        \"\"\"\n",
+    "\n",
+    "        Args:\n",
+    "            img_dir (str): path to the CAPS directory containing preprocessed images\n",
+    "            data_df (DataFrame): metadata of the population.\n",
+    "                Columns include participant_id, session_id and diagnosis).\n",
+    "            transform (callable): list of transforms applied on-the-fly, chained with torchvision.transforms.Compose.\n",
+    "        \"\"\"\n",
     "        self.img_dir = img_dir\n",
     "        self.transform = transform\n",
     "        self.data_df = data_df\n",
-    "        self.label_code = {\"AD\":1, \"CN\":0}\n",
+    "        self.label_code = {\"AD\": 1, \"CN\": 0}\n",
     "\n",
     "        self.size = self[0]['image'].shape\n",
     "        \n",
@@ -348,8 +356,7 @@
     "\n",
     "subject = 'sub-OASIS10003'\n",
     "preprocessed_pt = torch.load(f'OASIS-1_dataset/CAPS/subjects/{subject}/ses-M00/' +\n",
-    "                    'deeplearning_prepare_data/image_based/custom/' + subject +\n",
-    "                    '_ses-M00_'+\n",
+    "                    f'deeplearning_prepare_data/image_based/custom/{subject}_ses-M00_' +\n",
     "                    'T1w_segm-graymatter_space-Ixi549Space_modulated-off_' +\n",
     "                    'probability.pt')\n",
     "raw_nii = nib.load(f'OASIS-1_dataset/raw/{subject}_ses-M00_T1w.nii.gz')\n",
@@ -401,44 +408,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "train_df = pd.read_csv('OASIS-1_dataset/tsv_files/lab_1/train.tsv', sep='\\t')\n",
     "valid_df = pd.read_csv('OASIS-1_dataset/tsv_files/lab_1/validation.tsv', sep='\\t')\n",
-    "\n",
-    "train_population_df = characteristics_table(train_df, OASIS_df)\n",
-    "valid_population_df = characteristics_table(valid_df, OASIS_df)\n",
-    "\n",
-    "print(f\"Train dataset:\\n {train_population_df}\\n\")\n",
-    "print(f\"Validation dataset:\\n {valid_population_df}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can observe that our dataset is biased: the AD and CN populations do \n",
-    "not have the same age distributions at all! It becomes then very easy \n",
-    "to differentiate them as the age regression between 20 and 95 years old is\n",
-    " an easier task than AD vs CN classification.\n",
-    "\n",
-    "To avoid this bias, the youngest participants of OASIS are removed from \n",
-    "the training and validation DataFrames. More precisely, to match the AD\n",
-    "population in which the youngest participant is 62, all participants \n",
-    "younger than 62 are removed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df = train_df[['participant_id']].merge(OASIS_df, how='left', on='participant_id', sort=False)\n",
-    "train_df = train_df[train_df.age_bl >= 62]\n",
-    "valid_df = valid_df[['participant_id']].merge(OASIS_df, how='left', on='participant_id', sort=False)\n",
-    "valid_df = valid_df[valid_df.age_bl >= 62]\n",
     "\n",
     "train_population_df = characteristics_table(train_df, OASIS_df)\n",
     "valid_population_df = characteristics_table(valid_df, OASIS_df)\n",
@@ -682,7 +658,7 @@
     "lines_to_next_cell": 2
    },
    "source": [
-    "Here is an illustration of `PadMaxPool` behaviour, a column is added to avoid\n",
+    "Here is an illustration of `PadMaxPool` behaviour. If the number of columns is odd, a column is added to avoid\n",
     "losing data:\n",
     "\n",
     "<a href=\"PadMaxPool behaviour\"><img src=\"https://drive.google.com/uc?id=14R_LCTiV0N6ZXm-3wQCj_Gtc1LsXdQq_\" style=\"height: 200px;\"></a>\n",
@@ -749,63 +725,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The max pooling module of pytorch does not deal with odd sizes, indeed when\n",
-    "the size is not a multiple of the stride (here 2) the last column is thrown.\n",
-    "To avoid this we use a custom module `PadMaxPool3d` instead of the standard\n",
-    "module `nn.MaxPooling3d`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PadMaxPool3d(nn.Module):\n",
-    "    \"\"\"A MaxPooling module which deals with odd sizes with padding\"\"\"\n",
-    "    def __init__(self, kernel_size, stride, return_indices=False, return_pad=False):\n",
-    "        super(PadMaxPool3d, self).__init__()\n",
-    "        self.kernel_size = kernel_size\n",
-    "        self.stride = stride\n",
-    "        self.pool = nn.MaxPool3d(kernel_size, stride, return_indices=return_indices)\n",
-    "        self.pad = nn.ConstantPad3d(padding=0, value=0)\n",
-    "        self.return_indices = return_indices\n",
-    "        self.return_pad = return_pad\n",
-    "\n",
-    "    def set_new_return(self, return_indices=True, return_pad=True):\n",
-    "        self.return_indices = return_indices\n",
-    "        self.return_pad = return_pad\n",
-    "        self.pool.return_indices = return_indices\n",
-    "\n",
-    "    def forward(self, f_maps):\n",
-    "        coords = [self.stride - f_maps.size(i + 2) % self.stride for i in range(3)]\n",
-    "        for i, coord in enumerate(coords):\n",
-    "            if coord == self.stride:\n",
-    "                coords[i] = 0\n",
-    "\n",
-    "        self.pad.padding = (coords[2], 0, coords[1], 0, coords[0], 0)\n",
-    "\n",
-    "        if self.return_indices:\n",
-    "            output, indices = self.pool(self.pad(f_maps))\n",
-    "\n",
-    "            if self.return_pad:\n",
-    "                return output, indices, (coords[2], 0, coords[1], 0, coords[0], 0)\n",
-    "            else:\n",
-    "                return output, indices\n",
-    "\n",
-    "        else:\n",
-    "            output = self.pool(self.pad(f_maps))\n",
-    "\n",
-    "            if self.return_pad:\n",
-    "                return output, (coords[2], 0, coords[1], 0, coords[0], 0)\n",
-    "            else:\n",
-    "                return output"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## TODO Network design\n",
     "Construct here the network corresponding to the scheme and the following\n",
     "description:\n",
@@ -831,26 +750,30 @@
    "outputs": [],
    "source": [
     "# ToDo\n",
+    "# begin{student version}\n",
     "class CustomNetwork(nn.Module):\n",
     "    \n",
     "    def __init__(self):\n",
     "        super(CustomNetwork, self).__init__()\n",
-    "        # Create the layers composing the network\n",
+    "        # Create the layers composing the network.\n",
+    "        # TIP: you can use Sequential to avoid naming all the layers one by one.\n",
     "        pass\n",
     "        \n",
     "    def forward(self, x):\n",
     "        # Compose the forward operation using the layers defined in __init__\n",
-    "        pass"
+    "        pass\n",
+    "# end{student version}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 1
+    "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
+    "# begin{correction version}\n",
     "class CustomNetwork(nn.Module):\n",
     "    \n",
     "    def __init__(self):\n",
@@ -889,7 +812,9 @@
     "        x = self.convolutions(x)\n",
     "        x = x.view(x.size(0), -1)\n",
     "        x = self.linear(x)\n",
-    "        return x"
+    "        return x\n",
+    "\n",
+    "# end{correction version}"
    ]
   },
   {
@@ -923,6 +848,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# begin{student version}\n",
+    "def train(model, train_loader, criterion, optimizer, n_epochs):\n",
+    "    \"\"\"\n",
+    "    Method used to train a CNN\n",
+    "\n",
+    "    Args:\n",
+    "        model: (nn.Module) the neural network\n",
+    "        train_loader: (DataLoader) a DataLoader wrapping a MRIDataset\n",
+    "        criterion: (nn.Module) a method to compute the loss of a mini-batch of images\n",
+    "        optimizer: (torch.optim) an optimization algorithm\n",
+    "        n_epochs: (int) number of epochs performed during training\n",
+    "\n",
+    "    Returns:\n",
+    "        best_model: (nn.Module) the trained neural network\n",
+    "    \"\"\"\n",
+    "    best_model = deepcopy(model)\n",
+    "    train_best_loss = np.inf\n",
+    "\n",
+    "    for epoch in range(n_epochs):\n",
+    "        model.train()\n",
+    "        train_loader.dataset.train()\n",
+    "        for i, data in enumerate(train_loader, 0):\n",
+    "            # Complete the train iteration\n",
+    "\n",
+    "        _, train_metrics = test(model, train_loader, criterion)\n",
+    "\n",
+    "        print(f'Epoch %i: loss = %f, balanced accuracy = %f'\n",
+    "              % (epoch, train_metrics['mean_loss'],\n",
+    "                 train_metrics['balanced_accuracy']))\n",
+    "\n",
+    "        if train_metrics['mean_loss'] < train_best_loss:\n",
+    "            best_model = deepcopy(model)\n",
+    "            train_best_loss = train_metrics['mean_loss']\n",
+    "\n",
+    "    return best_model\n",
+    "\n",
+    "\n",
+    "# end{student version}\n",
+    "\n",
+    "# begin{correction version}\n",
     "def train(model, train_loader, criterion, optimizer, n_epochs):\n",
     "    \"\"\"\n",
     "    Method used to train a CNN\n",
@@ -944,7 +909,6 @@
     "        model.train()\n",
     "        train_loader.dataset.train()\n",
     "        for i, data in enumerate(train_loader, 0):\n",
-    "            # Complete the train iteration\n",
     "            # Retrieve mini-batch and put data on GPU with .cuda()\n",
     "            images, labels = data['image'].cuda(), data['label'].cuda()\n",
     "            # Forward pass\n",
@@ -969,6 +933,7 @@
     "            train_best_loss = train_metrics['mean_loss']\n",
     "    \n",
     "    return best_model\n",
+    "# end{correction version}\n",
     "\n",
     "def test(model, data_loader, criterion):\n",
     "    \"\"\"\n",
@@ -1076,7 +1041,12 @@
     "valid_datasetLeftHC = MRIDataset(img_dir, valid_df, transform=transform)\n",
     "\n",
     "# Try different learning rates\n",
-    "learning_rate = 10**-4 # e.g.: 10**-1, 10**-2, 10**-3\n",
+    "# begin{correction version}\n",
+    "learning_rate = 10**-4\n",
+    "# end{correction version}\n",
+    "# begin{student version}\n",
+    "learning_rate = ... # Try different learning rates between 10**-5 and 10**-3\n",
+    "# end{student version}\n",
     "n_epochs = 30\n",
     "batch_size = 4\n",
     "\n",
@@ -1110,7 +1080,7 @@
     "at 20 ! Then you should check that the performance of the network is still\n",
     "good for the old population only.\n",
     "\n",
-    "Check accuracy of old participants (age > 62 to match the minimum of AD age\n",
+    "Check the accuracy on old participants (age > 62 to match the minimum of AD age\n",
     "distribution)"
    ]
   },
@@ -1129,8 +1099,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If this is not the case, you have to think again about your framework and\n",
-    "eventually retrain your network..."
+    "If the accuracy on old participants is very different from the one you obtained before,\n",
+    "this could mean that your network is inefficient on the target population (persons older than 60).\n",
+    "You have to think again about your framework and eventually retrain your network..."
    ]
   },
   {
@@ -1156,7 +1127,12 @@
     "train_datasetRightHC = MRIDataset(img_dir, train_df, transform=transform)\n",
     "valid_datasetRightHC = MRIDataset(img_dir, valid_df, transform=transform)\n",
     "\n",
-    "learning_rate = 10**-4 # e.g.: 10**-1, 10**-2, 10**-3\n",
+    "# begin{correction version}\n",
+    "learning_rate = 10**-4\n",
+    "# end{correction version}\n",
+    "# begin{student version}\n",
+    "learning_rate = ... # You can reuse the same learning rate as before\n",
+    "# end{student version}\n",
     "n_epochs = 30\n",
     "batch_size = 4\n",
     "\n",
@@ -1190,11 +1166,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def softvoting(df1, df2):\n",
-    "    df1 = df1.set_index('participant_id', drop=True)\n",
-    "    df2 = df2.set_index('participant_id', drop=True)\n",
+    "# begin{correction version}\n",
+    "def softvoting(leftHC_df, rightHC_df):\n",
+    "    df1 = leftHC_df.set_index('participant_id', drop=True)\n",
+    "    df2 = rightHC_df.set_index('participant_id', drop=True)\n",
     "    results_df = pd.DataFrame(index=df1.index.values,\n",
-    "                              columns=['true_label', 'predicted_label', \n",
+    "                              columns=['true_label', 'predicted_label',\n",
     "                                       'proba0', 'proba1'])\n",
     "    results_df.true_label = df1.true_label\n",
     "    # Compute predicted label and probabilities\n",
@@ -1203,7 +1180,12 @@
     "    results_df.predicted_label = (0.5 * df1.proba1 + 0.5 * df2.proba1 > 0.5).astype(int)\n",
     "\n",
     "    return results_df\n",
+    "# end{correction version}\n",
+    "# begin{student version}\n",
+    "def softvoting(leftHC_df, rightHC_df):\n",
+    "    # ToDo implement soft-voting with same weights on both hippocampi.\n",
     "\n",
+    "# end{student version}\n",
     "\n",
     "valid_results = softvoting(valid_resultsLeftHC_df, valid_resultsRightHC_df)\n",
     "valid_metrics = compute_metrics(valid_results.true_label, valid_results.predicted_label)\n",
@@ -1216,8 +1198,8 @@
    "source": [
     "Keep in mind that the validation set was used to set the hyperparameters\n",
     "(learning rate, architecture), then validation metrics are biased. To have\n",
-    "unbiased results the entire framework should be evaluated when all the\n",
-    "hyperparameters are set on an independent set (test set)."
+    "unbiased results the entire framework should be evaluated on an independent\n",
+    " set (test set)."
    ]
   },
   {
@@ -1394,10 +1376,11 @@
    },
    "outputs": [],
    "source": [
+    "# begin{correction version}\n",
     "def trainAE(model, train_loader, criterion, optimizer, n_epochs):\n",
     "    \"\"\"\n",
     "    Method used to train an AutoEncoder\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        model: (nn.Module) the neural network\n",
     "        train_loader: (DataLoader) a DataLoader wrapping a MRIDataset\n",
@@ -1437,8 +1420,46 @@
     "        if mean_loss < train_best_loss:\n",
     "            best_model = deepcopy(model)\n",
     "            train_best_loss = mean_loss\n",
+    "\n",
+    "    return best_model\n",
+    "# end{correction version}\n",
+    "\n",
+    "# begin{student version}\n",
+    "def trainAE(model, train_loader, criterion, optimizer, n_epochs):\n",
+    "    \"\"\"\n",
+    "    Method used to train an AutoEncoder\n",
+    "    \n",
+    "    Args:\n",
+    "        model: (nn.Module) the neural network\n",
+    "        train_loader: (DataLoader) a DataLoader wrapping a MRIDataset\n",
+    "        criterion: (nn.Module) a method to compute the loss of a mini-batch of images\n",
+    "        optimizer: (torch.optim) an optimization algorithm\n",
+    "        n_epochs: (int) number of epochs performed during training\n",
+    "\n",
+    "    Returns:\n",
+    "        best_model: (nn.Module) the trained neural network.\n",
+    "    \"\"\"\n",
+    "    best_model = deepcopy(model)\n",
+    "    train_best_loss = np.inf\n",
+    "\n",
+    "    for epoch in range(n_epochs):\n",
+    "        model.train()\n",
+    "        train_loader.dataset.train()\n",
+    "        for i, data in enumerate(train_loader, 0):\n",
+    "            # ToDo Complete the training function in a similar way\n",
+    "            # than for the CNN classification training.\n",
+    "\n",
+    "        mean_loss = testAE(model, train_loader, criterion)\n",
+    "\n",
+    "        print(f'Epoch %i: loss = %f' % (epoch, mean_loss))\n",
+    "\n",
+    "        if mean_loss < train_best_loss:\n",
+    "            best_model = deepcopy(model)\n",
+    "            train_best_loss = mean_loss\n",
     "    \n",
     "    return best_model\n",
+    "# end{student version}\n",
+    "\n",
     "\n",
     "def testAE(model, data_loader, criterion):\n",
     "    \"\"\"\n",
@@ -1455,9 +1476,6 @@
     "    \"\"\"\n",
     "    model.eval()\n",
     "    data_loader.dataset.eval()\n",
-    "    columns = [\"participant_id\", \"proba0\", \"proba1\",\n",
-    "               \"true_label\", \"predicted_label\"]\n",
-    "    results_df = pd.DataFrame(columns=columns)\n",
     "    total_loss = 0\n",
     "    \n",
     "    with torch.no_grad():\n",
@@ -1618,7 +1636,7 @@
    "metadata": {},
    "source": [
     "The accuracy may not be very good, this could mean that the framework\n",
-    "classified another characteristic that the one you tried to target.\n",
+    "clustered another characteristic that the one you tried to target.\n",
     "\n",
     "What is actually expected is that the clustering differenciation is made on\n",
     "the level of atrophy, which is mostly correlated to the age but also to the\n",
