--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -203,9 +203,9 @@
     "\n",
     "\n",
     "The preprocessed images are store in the [CAPS\n",
-    "format](http://www.clinica.run/doc/CAPS/Introduction/) and all have the same\n",
-    "size (121x145x121). You will find below a *class* called `MRIDataset` that\n",
-    "allows to browse easily the database."
+    "folder structure](http://www.clinica.run/doc/CAPS/Introduction/) and all have\n",
+    "the same size (121x145x121). You will find below a *class* called `MRIDataset`\n",
+    "which allows easy browsing in the database."
    ]
   },
   {
@@ -221,7 +221,6 @@
     "    \n",
     "    def __init__(self, img_dir, data_df, transform=None):\n",
     "        \"\"\"\n",
-    "\n",
     "        Args:\n",
     "            img_dir (str): path to the CAPS directory containing preprocessed images\n",
     "            data_df (DataFrame): metadata of the population.\n",
@@ -745,35 +744,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
-    "# ToDo\n",
-    "# begin{student version}\n",
-    "class CustomNetwork(nn.Module):\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        super(CustomNetwork, self).__init__()\n",
-    "        # Create the layers composing the network.\n",
-    "        # TIP: you can use Sequential to avoid naming all the layers one by one.\n",
-    "        pass\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        # Compose the forward operation using the layers defined in __init__\n",
-    "        pass\n",
-    "# end{student version}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "# begin{correction version}\n",
+    "# To complete\n",
     "class CustomNetwork(nn.Module):\n",
     "    \n",
     "    def __init__(self):\n",
@@ -812,9 +787,7 @@
     "        x = self.convolutions(x)\n",
     "        x = x.view(x.size(0), -1)\n",
     "        x = self.linear(x)\n",
-    "        return x\n",
-    "\n",
-    "# end{correction version}"
+    "        return x"
    ]
   },
   {
@@ -848,46 +821,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# begin{student version}\n",
-    "def train(model, train_loader, criterion, optimizer, n_epochs):\n",
-    "    \"\"\"\n",
-    "    Method used to train a CNN\n",
-    "\n",
-    "    Args:\n",
-    "        model: (nn.Module) the neural network\n",
-    "        train_loader: (DataLoader) a DataLoader wrapping a MRIDataset\n",
-    "        criterion: (nn.Module) a method to compute the loss of a mini-batch of images\n",
-    "        optimizer: (torch.optim) an optimization algorithm\n",
-    "        n_epochs: (int) number of epochs performed during training\n",
-    "\n",
-    "    Returns:\n",
-    "        best_model: (nn.Module) the trained neural network\n",
-    "    \"\"\"\n",
-    "    best_model = deepcopy(model)\n",
-    "    train_best_loss = np.inf\n",
-    "\n",
-    "    for epoch in range(n_epochs):\n",
-    "        model.train()\n",
-    "        train_loader.dataset.train()\n",
-    "        for i, data in enumerate(train_loader, 0):\n",
-    "            # Complete the train iteration\n",
-    "\n",
-    "        _, train_metrics = test(model, train_loader, criterion)\n",
-    "\n",
-    "        print(f'Epoch %i: loss = %f, balanced accuracy = %f'\n",
-    "              % (epoch, train_metrics['mean_loss'],\n",
-    "                 train_metrics['balanced_accuracy']))\n",
-    "\n",
-    "        if train_metrics['mean_loss'] < train_best_loss:\n",
-    "            best_model = deepcopy(model)\n",
-    "            train_best_loss = train_metrics['mean_loss']\n",
-    "\n",
-    "    return best_model\n",
-    "\n",
-    "\n",
-    "# end{student version}\n",
-    "\n",
-    "# begin{correction version}\n",
     "def train(model, train_loader, criterion, optimizer, n_epochs):\n",
     "    \"\"\"\n",
     "    Method used to train a CNN\n",
@@ -933,7 +866,6 @@
     "            train_best_loss = train_metrics['mean_loss']\n",
     "    \n",
     "    return best_model\n",
-    "# end{correction version}\n",
     "\n",
     "def test(model, data_loader, criterion):\n",
     "    \"\"\"\n",
@@ -1041,12 +973,7 @@
     "valid_datasetLeftHC = MRIDataset(img_dir, valid_df, transform=transform)\n",
     "\n",
     "# Try different learning rates\n",
-    "# begin{correction version}\n",
     "learning_rate = 10**-4\n",
-    "# end{correction version}\n",
-    "# begin{student version}\n",
-    "learning_rate = ... # Try different learning rates between 10**-5 and 10**-3\n",
-    "# end{student version}\n",
     "n_epochs = 30\n",
     "batch_size = 4\n",
     "\n",
@@ -1127,12 +1054,7 @@
     "train_datasetRightHC = MRIDataset(img_dir, train_df, transform=transform)\n",
     "valid_datasetRightHC = MRIDataset(img_dir, valid_df, transform=transform)\n",
     "\n",
-    "# begin{correction version}\n",
     "learning_rate = 10**-4\n",
-    "# end{correction version}\n",
-    "# begin{student version}\n",
-    "learning_rate = ... # You can reuse the same learning rate as before\n",
-    "# end{student version}\n",
     "n_epochs = 30\n",
     "batch_size = 4\n",
     "\n",
@@ -1166,7 +1088,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# begin{correction version}\n",
     "def softvoting(leftHC_df, rightHC_df):\n",
     "    df1 = leftHC_df.set_index('participant_id', drop=True)\n",
     "    df2 = rightHC_df.set_index('participant_id', drop=True)\n",
@@ -1180,12 +1101,6 @@
     "    results_df.predicted_label = (0.5 * df1.proba1 + 0.5 * df2.proba1 > 0.5).astype(int)\n",
     "\n",
     "    return results_df\n",
-    "# end{correction version}\n",
-    "# begin{student version}\n",
-    "def softvoting(leftHC_df, rightHC_df):\n",
-    "    # ToDo implement soft-voting with same weights on both hippocampi.\n",
-    "\n",
-    "# end{student version}\n",
     "\n",
     "valid_results = softvoting(valid_resultsLeftHC_df, valid_resultsRightHC_df)\n",
     "valid_metrics = compute_metrics(valid_results.true_label, valid_results.predicted_label)\n",
@@ -1376,7 +1291,6 @@
    },
    "outputs": [],
    "source": [
-    "# begin{correction version}\n",
     "def trainAE(model, train_loader, criterion, optimizer, n_epochs):\n",
     "    \"\"\"\n",
     "    Method used to train an AutoEncoder\n",
@@ -1422,43 +1336,6 @@
     "            train_best_loss = mean_loss\n",
     "\n",
     "    return best_model\n",
-    "# end{correction version}\n",
-    "\n",
-    "# begin{student version}\n",
-    "def trainAE(model, train_loader, criterion, optimizer, n_epochs):\n",
-    "    \"\"\"\n",
-    "    Method used to train an AutoEncoder\n",
-    "    \n",
-    "    Args:\n",
-    "        model: (nn.Module) the neural network\n",
-    "        train_loader: (DataLoader) a DataLoader wrapping a MRIDataset\n",
-    "        criterion: (nn.Module) a method to compute the loss of a mini-batch of images\n",
-    "        optimizer: (torch.optim) an optimization algorithm\n",
-    "        n_epochs: (int) number of epochs performed during training\n",
-    "\n",
-    "    Returns:\n",
-    "        best_model: (nn.Module) the trained neural network.\n",
-    "    \"\"\"\n",
-    "    best_model = deepcopy(model)\n",
-    "    train_best_loss = np.inf\n",
-    "\n",
-    "    for epoch in range(n_epochs):\n",
-    "        model.train()\n",
-    "        train_loader.dataset.train()\n",
-    "        for i, data in enumerate(train_loader, 0):\n",
-    "            # ToDo Complete the training function in a similar way\n",
-    "            # than for the CNN classification training.\n",
-    "\n",
-    "        mean_loss = testAE(model, train_loader, criterion)\n",
-    "\n",
-    "        print(f'Epoch %i: loss = %f' % (epoch, mean_loss))\n",
-    "\n",
-    "        if mean_loss < train_best_loss:\n",
-    "            best_model = deepcopy(model)\n",
-    "            train_best_loss = mean_loss\n",
-    "    \n",
-    "    return best_model\n",
-    "# end{student version}\n",
     "\n",
     "\n",
     "def testAE(model, data_loader, criterion):\n",
