--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -131,7 +131,6 @@
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
     "import torch.nn.functional as F\n",
-    "from torch.autograd import Variable\n",
     "\n",
     "# torchsummary and torchvision\n",
     "from torchsummary import summary\n",
@@ -479,8 +478,8 @@
     "    def sample_images(epoch):\n",
     "        \"\"\"Saves a generated sample from the validation set\"\"\"\n",
     "        imgs = next(iter(test_loader))\n",
-    "        real_A = Variable(imgs[\"T1\"].type(Tensor))\n",
-    "        real_B = Variable(imgs[\"T2\"].type(Tensor))\n",
+    "        real_A = imgs[\"T1\"].type(Tensor)\n",
+    "        real_B = imgs[\"T2\"].type(Tensor)\n",
     "        fake_B = generator(real_A)\n",
     "        img_sample = torch.cat((real_A.data, fake_B.data, real_B.data), -2)\n",
     "        save_image(img_sample, f\"./images/generator/epoch-{epoch}.png\",\n",
@@ -496,8 +495,8 @@
     "        for i, batch in enumerate(train_loader):\n",
     "\n",
     "            # Inputs T1-w and T2-w\n",
-    "            real_t1 = Variable(batch[\"T1\"].type(Tensor))\n",
-    "            real_t2 = Variable(batch[\"T2\"].type(Tensor))\n",
+    "            real_t1 = batch[\"T1\"].type(Tensor)\n",
+    "            real_t2 = batch[\"T2\"].type(Tensor)\n",
     "\n",
     "            # Remove stored gradients\n",
     "            optimizer.zero_grad()\n",
@@ -724,31 +723,33 @@
     "    cuda = True if torch.cuda.is_available() else False\n",
     "    Tensor = torch.cuda.FloatTensor if cuda else torch.FloatTensor\n",
     "\n",
-    "    for i, batch in enumerate(train_loader):\n",
+    "    with torch.no_grad():\n",
     "\n",
-    "        # Inputs T1-w and T2-w\n",
-    "        real_t1 = Variable(batch[\"T1\"].type(Tensor), requires_grad=False)\n",
-    "        real_t2 = Variable(batch[\"T2\"].type(Tensor), requires_grad=False)\n",
-    "        fake_t2 = Variable(generator(real_t1), requires_grad=False)\n",
+    "        for i, batch in enumerate(train_loader):\n",
     "\n",
-    "        mae = mean_absolute_error(real_t2, fake_t2).item()\n",
-    "        psnr = peak_signal_to_noise_ratio(real_t2, fake_t2).item()\n",
-    "        ssim = structural_similarity_index(real_t2, fake_t2).item()\n",
+    "            # Inputs T1-w and T2-w\n",
+    "            real_t1 = batch[\"T1\"].type(Tensor)\n",
+    "            real_t2 = batch[\"T2\"].type(Tensor)\n",
+    "            fake_t2 = generator(real_t1)\n",
     "\n",
-    "        res_train.append([mae, psnr, ssim])\n",
+    "            mae = mean_absolute_error(real_t2, fake_t2).item()\n",
+    "            psnr = peak_signal_to_noise_ratio(real_t2, fake_t2).item()\n",
+    "            ssim = structural_similarity_index(real_t2, fake_t2).item()\n",
     "\n",
-    "    for i, batch in enumerate(test_loader):\n",
+    "            res_train.append([mae, psnr, ssim])\n",
     "\n",
-    "        # Inputs T1-w and T2-w\n",
-    "        real_t1 = Variable(batch[\"T1\"].type(Tensor), requires_grad=False)\n",
-    "        real_t2 = Variable(batch[\"T2\"].type(Tensor), requires_grad=False)\n",
-    "        fake_t2 = Variable(generator(real_t1), requires_grad=False)\n",
+    "        for i, batch in enumerate(test_loader):\n",
     "\n",
-    "        mae = mean_absolute_error(real_t2, fake_t2).item()\n",
-    "        psnr = peak_signal_to_noise_ratio(real_t2, fake_t2).item()\n",
-    "        ssim = structural_similarity_index(real_t2, fake_t2).item()\n",
+    "            # Inputs T1-w and T2-w\n",
+    "            real_t1 = batch[\"T1\"].type(Tensor)\n",
+    "            real_t2 = batch[\"T2\"].type(Tensor)\n",
+    "            fake_t2 = generator(real_t1)\n",
     "\n",
-    "        res_test.append([mae, psnr, ssim])\n",
+    "            mae = mean_absolute_error(real_t2, fake_t2).item()\n",
+    "            psnr = peak_signal_to_noise_ratio(real_t2, fake_t2).item()\n",
+    "            ssim = structural_similarity_index(real_t2, fake_t2).item()\n",
+    "\n",
+    "            res_test.append([mae, psnr, ssim])\n",
     "\n",
     "    df = pd.DataFrame([\n",
     "        pd.DataFrame(res_train, columns=['MAE', 'PSNR', 'SSIM']).mean().squeeze(),\n",
@@ -1029,8 +1030,8 @@
     "    def sample_images(epoch):\n",
     "        \"\"\"Saves a generated sample from the validation set\"\"\"\n",
     "        imgs = next(iter(test_loader))\n",
-    "        real_t1 = Variable(imgs[\"T1\"].type(Tensor))\n",
-    "        real_t2 = Variable(imgs[\"T2\"].type(Tensor))\n",
+    "        real_t1 = imgs[\"T1\"].type(Tensor)\n",
+    "        real_t2 = imgs[\"T2\"].type(Tensor)\n",
     "        fake_t2 = generator(real_t1)\n",
     "        img_sample = torch.cat((real_t1.data, fake_t2.data, real_t2.data), -2)\n",
     "        save_image(img_sample, f\"./images/cgan/epoch-{epoch}.png\",\n",
@@ -1046,14 +1047,12 @@
     "        for i, batch in enumerate(train_loader):\n",
     "\n",
     "            # Inputs T1-w and T2-w\n",
-    "            real_t1 = Variable(batch[\"T1\"].type(Tensor))\n",
-    "            real_t2 = Variable(batch[\"T2\"].type(Tensor))\n",
+    "            real_t1 = batch[\"T1\"].type(Tensor)\n",
+    "            real_t2 = batch[\"T2\"].type(Tensor)\n",
     "\n",
     "            # Create labels\n",
-    "            valid = Variable(Tensor(np.ones((real_t2.size(0), 1, 1, 1))),\n",
-    "                             requires_grad=False)\n",
-    "            fake = Variable(Tensor(np.zeros((real_t2.size(0), 1, 1, 1))),\n",
-    "                            requires_grad=False)\n",
+    "            valid = Tensor(np.ones((real_t2.size(0), 1, 1, 1)))\n",
+    "            fake = Tensor(np.zeros((real_t2.size(0), 1, 1, 1)))\n",
     "\n",
     "            # -----------------\n",
     "            #  Train Generator\n",
@@ -1411,8 +1410,8 @@
     "    def sample_images(epoch):\n",
     "        \"\"\"Saves a generated sample from the validation set\"\"\"\n",
     "        imgs = next(iter(test_loader))\n",
-    "        real_t1 = Variable(imgs[\"T1\"].type(Tensor))\n",
-    "        real_t2 = Variable(imgs[\"T2\"].type(Tensor))\n",
+    "        real_t1 = imgs[\"T1\"].type(Tensor)\n",
+    "        real_t2 = imgs[\"T2\"].type(Tensor)\n",
     "        fake_t2 = generator_from_t1_to_t2(real_t1)\n",
     "        img_sample = torch.cat((real_t1.data, fake_t2.data, real_t2.data), -2)\n",
     "        save_image(img_sample, f\"./images/cyclegan/epoch-{epoch}.png\",\n",
@@ -1428,19 +1427,15 @@
     "        for i, batch in enumerate(train_loader):\n",
     "\n",
     "            # Inputs T1-w and T2-w\n",
-    "            real_t1 = Variable(batch[\"T1\"].type(Tensor))\n",
-    "            real_t2 = Variable(batch[\"T2\"].type(Tensor))\n",
+    "            real_t1 = batch[\"T1\"].type(Tensor)\n",
+    "            real_t2 = batch[\"T2\"].type(Tensor)\n",
     "\n",
     "            # Create labels\n",
-    "            valid_t1 = Variable(Tensor(np.ones((real_t1.size(0), 1, 1, 1))),\n",
-    "                                requires_grad=False)\n",
-    "            imitation_t1 = Variable(Tensor(np.zeros((real_t1.size(0), 1, 1, 1))),\n",
-    "                                    requires_grad=False)\n",
+    "            valid_t1 = Tensor(np.ones((real_t1.size(0), 1, 1, 1)))\n",
+    "            imitation_t1 = Tensor(np.zeros((real_t1.size(0), 1, 1, 1)))\n",
     "\n",
-    "            valid_t2 = Variable(Tensor(np.ones((real_t2.size(0), 1, 1, 1))),\n",
-    "                                requires_grad=False)\n",
-    "            imitation_t2 = Variable(Tensor(np.zeros((real_t2.size(0), 1, 1, 1))),\n",
-    "                                    requires_grad=False)\n",
+    "            valid_t2 = Tensor(np.ones((real_t2.size(0), 1, 1, 1)))\n",
+    "            imitation_t2 = Tensor(np.zeros((real_t2.size(0), 1, 1, 1)))\n",
     "\n",
     "            # ------------------\n",
     "            #  Train Generators\n",
