discriminator block now return a Sequential instead of a list

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8360b4cb",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -15,6 +16,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0484830b",
    "metadata": {},
    "source": [
     "In this lab we will focus on **image synthesis**, in particular to\n",
@@ -40,6 +42,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd1af3f1",
    "metadata": {},
    "source": [
     "# 0. Fetching the dataset\n",
@@ -57,6 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "703cf9cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +70,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "640d9cef",
    "metadata": {},
    "source": [
     "The dataset used in this lab is composed of preprocessed images from the\n",
@@ -84,6 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5601c8cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +119,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1e00e2e",
    "metadata": {},
    "source": [
     "Let's import all the necessary packages."
@@ -121,6 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e570f9ce",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -153,6 +161,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b1cc2a7",
    "metadata": {},
    "source": [
     "Let's create a custom `IXIDataset` class to easily have access to the data.\n",
@@ -164,6 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1001c5cf",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -218,6 +228,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13c6a3fd",
    "metadata": {},
    "source": [
     "Using this class and the `DataLoader` class from `torch.utils.data`, you can\n",
@@ -241,6 +252,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b027119",
    "metadata": {},
    "source": [
     "# 1. Generator\n",
@@ -261,6 +273,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5fc6c9be",
    "metadata": {},
    "source": [
     "<a href=\"https://ibb.co/QXBDNy3\">\n",
@@ -270,6 +283,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5b2fcae",
    "metadata": {},
    "source": [
     "\n",
@@ -282,6 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d7837569",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -359,6 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4740309a",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -398,6 +414,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66adfeda",
    "metadata": {},
    "source": [
     "Let's have a look at the architecture of our generator:"
@@ -406,6 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a0b078bd",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -417,6 +435,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b1ceb6f",
    "metadata": {},
    "source": [
     "## 1.2 Train the generator\n",
@@ -444,6 +463,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e3f3eb4",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -455,6 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fed4771c",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -569,6 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "28c4443c",
    "metadata": {
     "tags": [
      "remove_output"
@@ -601,6 +623,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ef60b771",
    "metadata": {},
    "source": [
     "## 1.3 Evaluate the generator\n",
@@ -611,6 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8960e253",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -625,6 +649,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "901efe20",
    "metadata": {},
    "source": [
     "After doing visual quality control, it is a good idea to quantify the quality\n",
@@ -665,6 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f1b65497",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -722,6 +748,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "819dfbb8",
    "metadata": {},
    "source": [
     "We will now evaluate the generator with these three metrics on both the\n",
@@ -731,6 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f94c1a4",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -786,6 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a62c9f9b",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -796,6 +825,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e8d533d7",
    "metadata": {},
    "source": [
     "The performance is already really good! The task may be pretty easy.\n",
@@ -805,6 +835,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe032197",
    "metadata": {},
    "source": [
     "# 2. Conditional Generative Adversarial Network (cGAN)\n",
@@ -829,6 +860,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c2243d4",
    "metadata": {},
    "source": [
     "## 2.1 Architecture of the cGAN\n",
@@ -857,6 +889,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a51f61e3",
    "metadata": {},
    "source": [
     "<a href=\"https://ibb.co/9b2jF0V\">\n",
@@ -866,6 +899,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f99943c0",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -877,9 +911,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "6f4045a0",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We provide a function to generate a block for the given architecture.\n",
@@ -887,29 +920,30 @@
     "    \"\"\"Return downsampling layers of each discriminator block\"\"\"\n",
     "    layers = [nn.Conv2d(in_filters, out_filters, 3, stride=2, padding=1)]\n",
     "    layers.append(nn.LeakyReLU(0.2, inplace=True))\n",
-    "    return layers\n",
+    "    return nn.Sequential(*layers)\n",
     "\n",
     "\n",
     "class Discriminator(nn.Module):\n",
     "    def __init__(self, in_channels=1):\n",
     "        super(Discriminator, self).__init__()\n",
+    "        self.layers = nn.Sequential(\n",
+    "            discriminator_block(in_channels*2, 64),\n",
+    "            discriminator_block(64, 128),\n",
+    "            discriminator_block(128, 256),\n",
+    "            discriminator_block(256, 512),\n",
+    "            nn.Conv2d(512, 1, 1, stride=4, padding=0),\n",
+    "        )\n",
     "\n",
-    "        layers = []\n",
-    "        layers.extend(discriminator_block(in_channels*2, 64))\n",
-    "        layers.extend(discriminator_block(64, 128))\n",
-    "        layers.extend(discriminator_block(128, 256))\n",
-    "        layers.extend(discriminator_block(256, 512))\n",
-    "        layers.append(nn.Conv2d(512, 1, 4, padding=0))\n",
-    "        self.model = nn.Sequential(*layers)\n",
     "\n",
     "    def forward(self, img_A, img_B):\n",
     "        # Concatenate image and condition image by channels to produce input\n",
     "        img_input = torch.cat((img_A, img_B), 1)\n",
-    "        return self.model(img_input)"
+    "        return self.layers(img_input)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "c35aad13",
    "metadata": {},
    "source": [
     "Let's have a look at the architecture of our discriminator:"
@@ -918,6 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "308552e9",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -929,6 +964,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73adccac",
    "metadata": {},
    "source": [
     "## 2.2 Training our conditional GAN\n",
@@ -994,6 +1030,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f0692c84",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -1005,6 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ad34ff39",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1165,6 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3734d60a",
    "metadata": {
     "tags": [
      "remove_output"
@@ -1178,6 +1217,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c2c38d0",
    "metadata": {},
    "source": [
     "## 2.3 Evaluating the generator of our cGAN\n",
@@ -1188,6 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "58a426f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,6 +1241,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c0316b3",
    "metadata": {},
    "source": [
     "We will now evaluate the generator of the cGAN with the same three metrics\n",
@@ -1210,6 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e52fc732",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1220,6 +1263,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ac65965",
    "metadata": {},
    "source": [
     "The performance is slightly lower for the cGAN, which is a bit disappointing.\n",
@@ -1233,6 +1277,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ae41c6d",
    "metadata": {},
    "source": [
     "# 3. CycleGAN\n",
@@ -1258,6 +1303,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "33ffda14",
    "metadata": {},
    "source": [
     "<a href=\"https://ibb.co/WtS49wR\">\n",
@@ -1267,6 +1313,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e10ec58",
    "metadata": {},
    "source": [
     "## 3.1 Architecture of the CycleGAN\n",
@@ -1281,6 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e83d1ab6",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1304,6 +1352,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0738e8ec",
    "metadata": {},
    "source": [
     "Let's have a look at the architecture of one discriminator in our CycleGAN:"
@@ -1312,6 +1361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03b81914",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1323,6 +1373,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b777985a",
    "metadata": {},
    "source": [
     "## 3.2 Training the CycleGAN\n",
@@ -1359,6 +1410,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4d689909",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -1370,6 +1422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dacac100",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1576,6 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b79d6f6f",
    "metadata": {
     "tags": [
      "remove_output"
@@ -1591,6 +1645,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12506239",
    "metadata": {},
    "source": [
     "## 3.3 Evaluating the generator of our CycleGAN\n",
@@ -1601,6 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e470297",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,6 +1669,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eea51d42",
    "metadata": {},
    "source": [
     "We will now evaluate the generator of the CycleGAN with the same three\n",
@@ -1623,6 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6a59e1b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,6 +1689,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02aab0b5",
    "metadata": {},
    "source": [
     "You should obtain a lower performance for the CycleGAN, which is not so\n",
@@ -1646,6 +1705,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "beee59c6",
    "metadata": {},
    "source": [
     "<a href=\"https://ibb.co/Q8FrRrd\">\n",
@@ -1665,5 +1725,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
